Fixed container div not covering whole container

--- a/main.css
+++ b/main.css
@@ -194,69 +194,6 @@ li{
     font-size: 5vw; 
     padding:1rem;
 }
-/* doesn't work 
-.nav-link:hover,
-.nav-link:focus{
-    background: ;
-    -webkit-background-clip:text;
-    color:transparent;
-}
-*/
-
-.top-nav.open{
-    top:0;
-    border-radius:initial;
-}
-
-.menu-toggler{
-    position: absolute;
-    top: 5rem;
-    right: 5rem;
-    width: 5rem;
-    height: 4rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    cursor:pointer;
-    z-index:1500;
-    transition:transform 650ms ease-out;
-}
-
-.menu-toggler.open{
-    transform:rotate(-45deg);
-}
-
-.bar{
-    /*background: var(--hor-gradient);*/
-    width:100%;
-    height:4px;
-    border-radius:.8rem;
-}
-
-.bar.half{
-    width:50%;
-}
-
-.bar.start{
-    transform-origin: right;
-    transition: transform 650ms cubic-bezier(0.54,-0.81,0.57,0.57);
-    
-}
-
-.open .bar.start{
-    transform:rotate(-450deg) translateX(.8rem);
-}
-
-.bar.end{
-    align-self:flex-end;
-    transform-origin: left;
-    transition: transform 650ms cubic-bezier(0.54,-0.81,0.57,0.57);
-}
-
-.open .bar.end{
-    transform:rotate(-450deg) translateX(-.8rem);
-    
-}
 
 .landing-text{
     position:absolute;
